--- a/st-society-oita/public/index.html
+++ b/st-society-oita/public/index.html
@@ -25,7 +25,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>サンプルサイト</title>
+    <title>第12回日本言語聴覚士協会九州地区学術集会大分大会</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
