--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="第12回九州地区学術集会大分大会"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json" crossorigin="use-credentials"/><title>大分言語聴覚士会</title><link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap" rel="stylesheet"/><meta name="google-site-verification" content="DMRnG9LKpbBWkZgTkrrmToiqrr6fU6vj6ThNZ5AhC3w"/><script defer="defer" src="./static/js/main.fdaba9c5.js"></script><link href="./static/css/main.0b79e6dd.css" rel="stylesheet"></head><body><script type="”application/ld+json”">{
       “@context” : “http://schema.org”,
       “@type” : “WebSite”,
-      “name” : “大分言語聴覚士会“,
+      “name” : “大分県言語聴覚士会“,
       “url” : “https://stsocietyoitaconference.github.io/top/”
       }</script><div id="root"></div></body></html>
