--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="第12回九州地区学術集会大分大会"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json" crossorigin="use-credentials"/><title>大分言語聴覚士会</title><script type="”application/ld+json”">{
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="第12回九州地区学術集会大分大会"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json" crossorigin="use-credentials"/><title>大分県言語聴覚士会</title><script type="”application/ld+json”">{
       “@context” : “http://schema.org”,
       “@type” : “WebSite”,
       “name” : “大分県言語聴覚士会“,
