--- a/st-society-oita/public/index.html
+++ b/st-society-oita/public/index.html
@@ -25,14 +25,26 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>第12回日本言語聴覚士協会九州地区学術集会大分大会</title>
+    <title>大分県言語聴覚士会</title>
+    <script type=”application/ld+json”>
+      {
+      “@context” : “http://schema.org”,
+      “@type” : “WebSite”,
+      “name” : “大分県言語聴覚士会“,
+      “url” : “https://stsocietyoitaconference.github.io/top/”
+      }
+      </script>
     <link
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap"
       rel="stylesheet"
     />
+    <meta
+      name="google-site-verification"
+      content="DMRnG9LKpbBWkZgTkrrmToiqrr6fU6vj6ThNZ5AhC3w"
+    />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
   </body>
 </html>
